# usami

./: Cargo.toml  compile_glsl  compile_spirv  run_compute_tester  run_coop_matrix_tester  run_mesh_tester  run_mesh_tester_with_frag  run_mesh_tester_with_task  sm70_instr_tools.py  unpack_nvvm
coop_matrix_layout_store_shaders/sm75/16x16x16/: matrix_muladd_float16_float16_float16_float16_16x16x16.asm  matrix_muladd_float16_float16_float16_float16_16x16x16.code  matrix_muladd_float16_float16_float32_float32_16x16x16.asm  matrix_muladd_float16_float16_float32_float32_16x16x16.code  matrix_muladd_float16_float16_float32_float32_16x16x16.spv
coop_matrix_layout_store_shaders/sm75/16x16x32/: matrix_muladd_sint8_sint8_sint32_sint32_16x16x32.asm  matrix_muladd_sint8_sint8_sint32_sint32_16x16x32.code  matrix_muladd_sint8_sint8_sint32_sint32_16x16x32.spv
coop_matrix_layout_store_shaders/sm75/16x8x16/: matrix_muladd_float16_float16_float16_float16_16x8x16.asm  matrix_muladd_float16_float16_float16_float16_16x8x16.code  matrix_muladd_float16_float16_float16_float16_16x8x16.glsl  matrix_muladd_float16_float16_float32_float32_16x8x16.asm  matrix_muladd_float16_float16_float32_float32_16x8x16.code  matrix_muladd_float16_float16_float32_float32_16x8x16.glsl  matrix_muladd_float16_float16_float32_float32_16x8x16.spv
coop_matrix_layout_store_shaders/sm75/16x8x32/: matrix_muladd_uint8_uint8_uint32_uint32_16x8x32.asm  matrix_muladd_uint8_uint8_uint32_uint32_16x8x32.code  matrix_muladd_uint8_uint8_uint32_uint32_16x8x32.spv
coop_matrix_layout_store_shaders/sm75/16x8x8/: matrix_muladd_float16_float16_float16_float16_16x8x8.asm  matrix_muladd_float16_float16_float16_float16_16x8x8.code  matrix_muladd_float16_float16_float16_float16_16x8x8.glsl  matrix_muladd_float16_float16_float32_float32_16x8x8.asm  matrix_muladd_float16_float16_float32_float32_16x8x8.code  matrix_muladd_float16_float16_float32_float32_16x8x8.glsl  (+1 more)
nvshaderdump/: Cargo.toml
nvshaderdump/src/: main.rs
resources/compute_coherent/: main.comp  main.comp.spv
resources/debug/: main.frag  main.frag.spv  main.vert  main.vert.spv
resources/texture/: main.frag  main.frag.spv  main.vert
resources/triangle/: main.frag  main.frag.spv  main.vert  main.vert.spv
scripts/: compile_shader.py  coop_matrix_defs.py  create_matrix_input.py  extract_compile_args.py  generate_test_shaders.py  mat_store_index.py  matrix_shader_runner.py
shader-dump/: Cargo.toml
shader-dump/src/: main.rs
src/: buffer.rs  command.rs  descriptor.rs  device.rs  fence.rs  framebuffer.rs  image.rs  instance.rs  lib.rs  memory.rs  pipeline.rs  queue.rs  renderpass.rs  shader.rs  utils.rs
tests/: barycentric.frag.glsl  barycentric_nopersp.frag.glsl  dFdyCoarse.frag.glsl  dFdyFine.frag.glsl  debug.frag.glsl  debug.geom.glsl  nopass.geom.glsl  pass.geom.glsl  sample_mask.frag.glsl  sample_mask_override_coverage.frag.glsl  shadingrate_nv.frag.glsl  simple.geom.glsl  simple.mesh.glsl  stereo_view_rendering.vert.glsl
tests/compute/: debug.comp.glsl  simple.comp.glsl  simple_buffer_store.comp.glsl  simple_buffer_store_image_samples.comp.glsl  simple_buffer_store_image_size.comp.glsl  simple_image_store.comp.glsl  simple_ubo_load.comp.glsl
tests/fragment/: dFdxCoarse.frag.glsl  dFdxFine.frag.glsl  debug.frag.asm  debug.frag.glsl  depth_coverage.frag.glsl  pass.frag.glsl  pass_per_primitive.frag.glsl  post_depth_coverage.frag.glsl  simple.frag.glsl  spv.fullyCovered.frag.glsl
tests/geometry/: invocation_per_layer.geom.glsl  render_to_all.geom.glsl  vertex_out_0_geometry_out_1.geom.glsl  vertex_out_0_geometry_out_2.geom.glsl
tests/mesh/: debug.mesh.glsl  debug2.mesh.glsl  four_points.mesh.glsl  invocation.mesh.glsl  points_debug.mesh.glsl  simple.mesh.glsl  simple_only_attr_write.mesh.glsl  simple_payload.mesh.glsl  simple_per_primitive.mesh.glsl  two_lines.mesh.glsl
tests/task/: debug.task.glsl  simple.task.glsl  simple_payload.task.glsl
tests/vertex/: nv_shader_sm_builtins.vert.glsl  viewport_array2.vert.glsl
usami/: Cargo.toml
usami-binaries/: Cargo.toml
usami-binaries/src/: ash_ext.rs  lib.rs
usami/src/: buffer.rs  command.rs  descriptor.rs  device.rs  fence.rs  framebuffer.rs  image.rs  instance.rs  lib.rs  memory.rs  pipeline.rs  queue.rs  renderpass.rs  shader.rs  utils.rs
(+315 files in other folders)
