[workspace.package]
version = "0.1.0"
authors = ["Mary <mary@mary.zone>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/marysaka/usami"
rust-version = "1.70"

[workspace]
members = ["usami/", "usami-binaries/", "shader-dump/"]
resolver = "2"

[workspace.dependencies]
usami = { version = "0.1.0", path = "./usami" }
usami-binaries = { version = "0.1.0", path = "./usami-binaries" }
shader-dump = { version = "0.1.0", path = "./shader-dump" }

argh = "0.1.12"
ash = { version = "0.37.3", features = ["debug"] }
axum = "0.6.20"
colorgrad = "0.6.2"
image = "0.24.6"
spirv-reflect = "0.2.3"

