[workspace.package]
version = "0.1.0"
authors = ["Mary <mary@mary.zone>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/marysaka/usami"
rust-version = "1.70"

[workspace]
members = ["usami/", "usami-binaries/", "shader-dump/"]
resolver = "2"

[workspace.dependencies]
usami = { version = "0.1.0", path = "./usami" }
usami-binaries = { version = "0.1.0", path = "./usami-binaries" }
shader-dump = { version = "0.1.0", path = "./shader-dump" }

argh = "0.1.12"
ash = { version = "0.37", features = ["debug"] }
axum = { version = "0.6", features = ["headers", "multipart"] }
axum_typed_multipart = "0.10"
colorgrad = "0.6"
hyper = "0.14"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spirv-reflect = "0.2"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
