[package]
name = "nvshaderdump"

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argh.workspace = true
hyper.workspace = true
lzma-rs.workspace = true
reqwest.workspace = true
tokio.workspace = true
zstd.workspace = true
