[package]
name = "shader-dump"

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argh.workspace = true
ash.workspace = true
usami.workspace = true
spirv-reflect.workspace = true
