[package]
name = "shader-dump"

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argh.workspace = true
ash.workspace = true
axum.workspace = true
axum_typed_multipart.workspace = true
hyper.workspace = true
usami.workspace = true
serde.workspace = true
serde_json.workspace = true
spirv-reflect.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true